--- a/public/index.html
+++ b/public/index.html
@@ -86,15 +86,17 @@
           </div>
           <div class="banner-list slide">
             <div class="slide-list">
-              <!-- <div class="slice-item">
-                <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
-              </div> -->
-              <div class="slice-item">
-                <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
+              <div class="slide-item__wrapper">
+                <div class="slide-item">
+                  <img src="http://shop3.daumcdn.net/shophow/sib/0_210219175556_BtjOWRoiPbsVXvlYusgFvjboDPXRIBQD" />
+                </div>
+                <div class="slide-item">
+                  <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
+                </div>
+                <div class="slide-item">
+                  <img src="http://shop1.daumcdn.net/shophow/sib/0_210219175602_vRyGDQxWDethcelhYcMmXKXpgLqlAIAj" />
+                </div>
               </div>
-              <!-- <div class="slice-item">
-                <img src="https://shop3.daumcdn.net/shophow/sib/0_210219175609_PZjbWVyRtwcxTlShApbdyOenwLaYCOhs" />
-              </div> -->
             </div>
             <div class="slide-event">
               <div class="slide-event__btn">
@@ -110,74 +112,74 @@
           </div>
         </div>
         <div class="banner__column"></div>
-          <ul class="event-item-list">
-            <li class="event-item">
-              <a href="">
-                <div class="item-img">
-                  <img
-                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                  />
-                </div>
-                <div class="item-title">지금은 신품종 전성시대</div>
-                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-                <div class="item-theme">테마</div>
-              </a>
-            </li>
-            <li class="event-item">
-              <a href="">
-                <div class="item-img">
-                  <img
-                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                  />
-                </div>
-                <div class="item-title">지금은 신품종 전성시대</div>
-                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-                <div class="item-theme">테마</div>
-              </a>
-            </li>
-            <li class="event-item">
-              <a href="">
-                <div class="item-img">
-                  <img
-                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                  />
-                </div>
-                <div class="item-title">지금은 신품종 전성시대</div>
-                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-                <div class="item-theme">테마</div>
-              </a>
-            </li>
-            <li class="event-item">
-              <a href="">
-                <div class="item-img">
-                  <img
-                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                  />
-                </div>
-                <div class="item-title">지금은 신품종 전성시대</div>
-                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-                <div class="item-theme">테마</div>
-              </a>
-            </li>
-            <li class="event-item">
-              <a href="">
-                <div class="item-img">
-                  <img
-                    src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
-                  />
-                </div>
-                <div class="item-title">지금은 신품종 전성시대</div>
-                <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
-                <div class="item-theme">테마</div>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <ul class="event-item-list">
+          <li class="event-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="event-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="event-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="event-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+          <li class="event-item">
+            <a href="">
+              <div class="item-img">
+                <img
+                  src="https://shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FU12033001670.jpg%3Fut%3D20210121221438&scode=talkgift"
+                />
+              </div>
+              <div class="item-title">지금은 신품종 전성시대</div>
+              <div class="item-info">늘 먹던 과일 대신 조금 색다르게 맛봐요!</div>
+              <div class="item-theme">테마</div>
+            </a>
+          </li>
+        </ul>
       </div>
+
       <div class="banner-more">
         <div class="more-text-container">
           <span>더보기</span>
-          <span class='text-index'>(1/276건)</span>
+          <span class="more-index">(1/276건)</span>
           <span><i class="fas fa-angle-down"></i></span>
         </div>
       </div>
