--- a/shopping/public/index.html
+++ b/shopping/public/index.html
@@ -13,7 +13,10 @@
       <section class="header__head">
         <div class="head__logo">
           <a href="/">
-            <img src="https://search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png" alt="쇼핑하우 by kakaocommerce" />
+            <img
+              src="https://search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png"
+              alt="쇼핑하우 by kakaocommerce"
+            />
           </a>
         </div>
         <div class="head__searchBar">
@@ -110,496 +113,34 @@
         <article class="article__keyword">
           <div class="title_info">
             <h3 class="title_home">쇼핑 급상승 키워드</h3>
-            <!-- <span class="txt_info"></span> -->
           </div>
-          <div class="content_item">
-            <ul class="list_item">
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-              <li class="_GI_">
-                <strong class="title_rank">
-                  <a href="">키워드 제목</a>
-                </strong>
-                <a href="">
-                  <img src="" alt="" />
-                  <strong class="title_g">제품 제목</strong>
-                  <span class="text_description">
-                    <span class="num_price">10,000</span>
-                    원
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <div class="content_item content_keyword"></div>
         </article>
+
         <article class="article__how">
           <div class="title_info">
             <h3 class="title_home">이 상품 어때요?</h3>
           </div>
-          <!-- <div class="thumb_tab">
-            <ul class="tab_home"></ul>
-            <button class="btn_g, btn_prev"><i class="fas fa-chevron-left"></i></button>
-            <button class="btn_g, btn_next"><i class="fas fa-chevron-right"></i></button>
-          </div> -->
           <div class="content_item">
             <div class="item_how">
               <strong class="title_sub">비슷한 관심사의 사람들이 많이 본 상품</strong>
-              <ul class="relate_wrap list_item">
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">컴퓨터</strong>
-                    <span class="text_description">
-                      <span class="num_price">2,000,000</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-              </ul>
+              <div class="how__relate"></div>
             </div>
             <div class="item_how">
               <strong class="title_sub">같은 카테고리 인기상품</strong>
-              <ul class="category_wrap list_item">
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-                <li class="_GI_">
-                  <a href="">
-                    <img src="" alt="" />
-                    <strong class="title_g">키보드</strong>
-                    <span class="text_description">
-                      <span class="num_price">19,900</span>
-                      원
-                    </span>
-                  </a>
-                </li>
-              </ul>
-              <a href="" class="link_view"></a>
+              <div class="how__same"></div>
+              <!-- <a href="" class="link_view"></a> -->
             </div>
           </div>
         </article>
       </section>
+
       <section class="main__etc">
         <article class="etc__partner">
           <h3 class="title_home">쇼핑하우 파트너</h3>
           <div class="section_etc">
-            <div class="cont_partner">
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="category_partner">
-                <strong class="title_mall">오픈마켓</strong>
-                <ul class="list_mall">
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                  <li class="_GI_">
-                    <a href="">11번가</a>
-                  </li>
-                </ul>
-              </div>
-              <button class="btn_home"><i class="fas fa-plus"></i></button>
-            </div>
+            <div class="cont_partner"></div>
+            <button class="btn_home"><i class="fas fa-plus"></i></button>
           </div>
           <a href="" class="link_all">전체보기<i class="fas fa-chevron-right"></i></a>
         </article>
@@ -644,11 +185,13 @@
           (평일 10:00 - 18:30)
         </p>
         <p class="text_caution">
-          (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다.
+          (주)카카오커머스는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 주문, 배송 및 환불 등과 관련한 의무와 책임은 각
+          판매자에게 있습니다.
           <br />
           최종 상품 정보는 구매 전 판매처에서 반드시 확인해주세요.
           <br />
-          각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기 바랍니다.
+          각 판매처의 매매보호 서비스를 통해 구매안전 절차 확인 후(에스크로/소비자피해보험/채무지금보증계약) 상품을 구매해 주시기
+          바랍니다.
         </p>
         <small class="text_copyright">
           Copyright ©
